<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Widget"
    android:layout_width="220dp"
    android:layout_height="220dp"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".MainWidget">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/black_amber"
        android:textSize="14dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="74dp"
        android:layout_height="74dp"
        tools:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/air_temp"
            android:textColor="@color/black_amber"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_amber"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/humidity"
            android:textColor="@color/black_amber"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/humid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_amber"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/pressure"
            android:textColor="@color/black_amber"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_amber"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/wind"
            android:textColor="@color/black_amber"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_amber"
            android:textSize="14dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextView07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/wind_speed"
            android:textColor="@color/black_amber"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_amber"
            android:textSize="14dp" />

    </LinearLayout>
</LinearLayout>
